--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lozad": "^1.6.0",
     "md5": "^2.2.1",
     "node-sass": "^4.9.3",
+    "npm": "^6.14.5",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
