--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "gitalk": "^1.5.3",
     "han-css": "^3.3.0",
     "highlight.js": "^9.12.0",
+    "latest": "^0.2.0",
     "lozad": "^1.6.0",
     "md5": "^2.2.1",
     "node-sass": "^4.9.3",
+    "nodejs": "0.0.0",
     "npm": "^6.14.5",
     "prismjs": "^1.15.0",
     "react": "^16.6.3",
